# Serialization

./: BuildFlatBuffers.cmake  CMakeLists.txt  common.cpp  common.h  flatbuffers.cpp  flatbuffers.fbs  overgeneralized.cpp  protobuf.cpp  protobuf.proto  serialization.cpp  serialization.h
